03.10.2021
    - Added instrument definition file for Roland SC55mkII created by FalCT60 (rj)
28.06.2021
    - New: Mixers can now be opened in a docked window (optionally). 
        When the mixer dock is floating, a top window title bar is added
        so it's possible to minimize/maximize the window. (kybos)
    - New: Custom themes (*.qss files) can be added to the HOME themes directory,
        they will be displayed in the Appearance dialog theme selection. (kybos)
20.06.2021
    - Fix crash 1028: Make effects rack 'move up/down' synchronized and real-time friendly. (Tim)
    - Also fixed a few problems with effects rack context menu.
13.06.2021
    - Fix 1002: Remove initial focus from mixer volume boxes. Fix related Smart Focus problems. (Tim)
05.06.2021
    - Fix more issue 1021: Copying synth track does not copy synth controllers. (Tim)
02.06.2021
    - Fix issue 1021: Copying synth track does not copy volume, pan. (Tim)
31.05.2021
    - Fix conflicting shortcuts in Add track menu. (kybos)
29.05.2021
    - Add: Global setting to enable LASH. Disabled by default. (kybos)
28.05.2021
    - Change default to sliders instead of knobs in mixer etc. (kybos)
27.05.2021
    - Fix: Dysfunctional duplicate shortcut for Push events. (kybos)
    - Fix: Create customizable shortcut for Pull events. (kybos)
    - Fix: Standardize shortcuts for Goto start/end, range start/end. (kybos)
    - Add: Shortcut for Add track menu (default Insert). (kybos)
    - Fix: Disallow Return and Escape as customizable keys to avoid conflicts. (kybos) 
    - Fix: Non-standard dropdowns in Midi config dialog. (kybos)
    - Possible fix 1013 + fix related errors in config.h.in + headers ex. plugin_cache_writer.h etc. (Tim)
26.05.2021
    - Add track menu: Move "Recently Used" to menu root.
        Add key mnemonics for still faster access. (kybos)
    - Enable polyphony for piano in pianoroll. (kybos)
    - Fix: Step recording: Cursor not forwarded after chords. (kybos)
25.05.2021