@@ -7,17 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>617</width>
-    <height>514</height>
+    <height>512</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>FLUID Synth</string>
   </property>
-  <layout class="QHBoxLayout" name="_2">
-   <property name="spacing">
-    <number>1</number>
-   </property>
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
     <layout class="QGridLayout" name="FluidGrid">
      <item row="2" column="0">
       <widget class="QFrame" name="DiskButtons">
@@ -466,7 +463,7 @@
        <property name="title">
         <string/>
        </property>
-       <layout class="QHBoxLayout">
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLabel" name="GainLabel">
           <property name="text">
@@ -492,7 +489,7 @@
            <number>5</number>
           </property>
           <property name="value">
-           <number>13</number>
+           <number>100</number>
           </property>
           <property name="tracking">
            <bool>true</bool>
@@ -505,6 +502,27 @@
           </property>
           <property name="tickInterval">
            <number>7</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="labelGainValue">
+          <property name="minimumSize">
+           <size>
+            <width>40</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+            <weight>75</weight>
+            <italic>true</italic>
+            <bold>true</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>100</string>
           </property>
          </widget>
         </item>
@@ -555,5 +573,22 @@
  </widget>
  <layoutdefault spacing="3" margin="8"/>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>Gain</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>labelGainValue</receiver>
+   <slot>setNum(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>302</x>
+     <y>482</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>581</x>
+     <y>482</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
